<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/hint_zero"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/total_amount_text"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/hint_zero"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/total_amount_text"
        app:layout_constraintTop_toBottomOf="@id/total_amount" />

    <TextView
        android:id="@+id/total_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/total_amount"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/total_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/total_amount" />

    <TextView
        android:id="@+id/tip_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/tip_amount"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/tip_amount"
        app:layout_constraintEnd_toEndOf="@+id/total_amount_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tip_amount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_amount">

        <TextView
            android:id="@+id/bills_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            android:text="@string/bills"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/bill_amount"
            app:layout_constraintLeft_toLeftOf="@id/bill_amount"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/hint_zero"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_500"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/bills_tv"
            app:layout_constraintRight_toRightOf="@id/bills_tv"
            app:layout_constraintTop_toBottomOf="@id/bills_tv" />


        <TextView
            android:id="@+id/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/tip_percentage"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/bills_tv"
            app:layout_constraintRight_toRightOf="@id/bills_tv"
            app:layout_constraintTop_toBottomOf="@id/bill_amount" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tipTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="@string/tip_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/h3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>